[gd_scene load_steps=26 format=2]

[ext_resource path="res://fonts/joystix monospace.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD/SkillsHUD/Skills2ButtonGroup.tres" type="ButtonGroup" id=2]
[ext_resource path="res://HUD/SkillsHUD/Skills3ButtonGroup.tres" type="ButtonGroup" id=3]
[ext_resource path="res://HUD/SkillsHUD/Skills1ButtonGroup.tres" type="ButtonGroup" id=4]
[ext_resource path="res://HUD/SkillsHUD/DesciptionContainer.gd" type="Script" id=5]
[ext_resource path="res://HUD/SkillsHUD/OkButton.gd" type="Script" id=6]
[ext_resource path="res://HUD/SkillsHUD/SpecialSkillMenu.gd" type="Script" id=7]
[ext_resource path="res://assets/HUD/skills/special-attacks-menu.png" type="Texture" id=8]
[ext_resource path="res://assets/HUD/skills/skill_icon.png" type="Texture" id=9]
[ext_resource path="res://assets/HUD/skills/skill_icon_clicked.png" type="Texture" id=10]
[ext_resource path="res://assets/HUD/skills/skill_icon_disabled.png" type="Texture" id=11]
[ext_resource path="res://assets/HUD/skills/skill_icom_skill3.png" type="Texture" id=12]
[ext_resource path="res://assets/HUD/skills/skill_icon_stone_golem.png" type="Texture" id=13]
[ext_resource path="res://assets/HUD/skills/skill_icon_fireball.png" type="Texture" id=14]
[ext_resource path="res://assets/HUD/skills/skill_icon_stone_golem_pressed.png" type="Texture" id=15]
[ext_resource path="res://assets/HUD/skills/skill_icon_fireball_pressed.png" type="Texture" id=16]
[ext_resource path="res://assets/UI - Words/Words without BG/UI - Words1.png" type="Texture" id=17]
[ext_resource path="res://assets/HUD/skills/skill_icom_skill3_pressed.png" type="Texture" id=18]
[ext_resource path="res://HUD/SkillsHUD/Panel1.gd" type="Script" id=19]
[ext_resource path="res://assets/HUD/skills/HUD_skill_menu_split_line.png" type="Texture" id=20]
[ext_resource path="res://HUD/SkillsHUD/Panel2.gd" type="Script" id=21]

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="DynamicFont" id=3]
size = 20
use_mipmaps = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 14
use_mipmaps = true
font_data = ExtResource( 1 )

[node name="SpecialSkillMenu" type="CanvasLayer"]
layer = 2
visible = false
scale = Vector2( 0.7, 0.7 )
transform = Transform2D( 0.7, 0, 0, 0.7, 0, 0 )
script = ExtResource( 7 )
skill1_group = ExtResource( 4 )
skill2_group = ExtResource( 2 )
skill3_group = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -140.0
margin_top = -70.0
margin_right = 1035.0
margin_bottom = 593.0
texture = ExtResource( 8 )
expand = true

[node name="CurrentSkills" type="GridContainer" parent="."]
margin_left = 61.4286
margin_top = 64.2857
margin_right = 177.429
margin_bottom = 96.2857
rect_scale = Vector2( 4, 4 )
custom_constants/hseparation = 10
columns = 3

[node name="Panel1" type="TextureButton" parent="CurrentSkills"]
margin_right = 32.0
margin_bottom = 32.0
toggle_mode = true
group = SubResource( 2 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="Panel2" type="TextureButton" parent="CurrentSkills"]
margin_left = 42.0
margin_right = 74.0
margin_bottom = 32.0
toggle_mode = true
group = SubResource( 2 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="Panel3" type="TextureButton" parent="CurrentSkills"]
margin_left = 84.0
margin_right = 116.0
margin_bottom = 32.0
toggle_mode = true
group = SubResource( 2 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="Skills1" type="GridContainer" parent="."]
margin_left = 64.0
margin_top = 260.0
margin_right = 736.0
margin_bottom = 516.0
rect_scale = Vector2( 0.7, 0.7 )
custom_constants/vseparation = 60
custom_constants/hseparation = 90
columns = 4

[node name="Panel1" type="TextureButton" parent="Skills1"]
margin_right = 96.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 4 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 15 )
texture_disabled = ExtResource( 11 )
expand = true
script = ExtResource( 19 )

[node name="Panel2" type="TextureButton" parent="Skills1"]
margin_left = 186.0
margin_right = 282.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 4 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 16 )
texture_disabled = ExtResource( 11 )
expand = true
script = ExtResource( 21 )

[node name="Panel3" type="TextureButton" parent="Skills1"]
margin_left = 372.0
margin_right = 468.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 4 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 18 )
texture_disabled = ExtResource( 11 )
expand = true

[node name="Panel4" type="TextureButton" parent="Skills1"]
margin_left = 558.0
margin_right = 654.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 4 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
expand = true

[node name="Panel5" type="TextureButton" parent="Skills1"]
margin_top = 156.0
margin_right = 96.0
margin_bottom = 252.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 4 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
expand = true

[node name="Panel6" type="TextureButton" parent="Skills1"]
margin_left = 186.0
margin_top = 156.0
margin_right = 282.0
margin_bottom = 252.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 4 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
expand = true

[node name="Panel7" type="TextureButton" parent="Skills1"]
margin_left = 372.0
margin_top = 156.0
margin_right = 468.0
margin_bottom = 252.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 4 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
expand = true

[node name="Panel8" type="TextureButton" parent="Skills1"]
margin_left = 558.0
margin_top = 156.0
margin_right = 654.0
margin_bottom = 252.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 4 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
expand = true

[node name="Skills2" type="GridContainer" parent="."]
visible = false
margin_left = 64.0
margin_top = 260.0
margin_right = 736.0
margin_bottom = 516.0
rect_scale = Vector2( 0.7, 0.7 )
custom_constants/vseparation = 60
custom_constants/hseparation = 90
columns = 4

[node name="Panel1" type="TextureButton" parent="Skills2"]
margin_right = 96.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 2 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 15 )
texture_disabled = ExtResource( 11 )
expand = true
script = ExtResource( 19 )

[node name="Panel2" type="TextureButton" parent="Skills2"]
margin_left = 186.0
margin_right = 282.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 2 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 16 )
texture_disabled = ExtResource( 11 )
expand = true
script = ExtResource( 21 )

[node name="Panel3" type="TextureButton" parent="Skills2"]
margin_left = 372.0
margin_right = 468.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 2 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 18 )
texture_disabled = ExtResource( 11 )
expand = true

[node name="Panel4" type="TextureButton" parent="Skills2"]
margin_left = 558.0
margin_right = 654.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 2 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
expand = true

[node name="Panel5" type="TextureButton" parent="Skills2"]
margin_top = 156.0
margin_right = 96.0
margin_bottom = 252.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 2 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
expand = true

[node name="Panel6" type="TextureButton" parent="Skills2"]
margin_left = 186.0
margin_top = 156.0
margin_right = 282.0
margin_bottom = 252.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 2 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
expand = true

[node name="Panel7" type="TextureButton" parent="Skills2"]
margin_left = 372.0
margin_top = 156.0
margin_right = 468.0
margin_bottom = 252.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 2 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
expand = true

[node name="Panel8" type="TextureButton" parent="Skills2"]
margin_left = 558.0
margin_top = 156.0
margin_right = 654.0
margin_bottom = 252.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 2 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
expand = true

[node name="Skills3" type="GridContainer" parent="."]
visible = false
margin_left = 64.0
margin_top = 260.0
margin_right = 736.0
margin_bottom = 516.0
rect_scale = Vector2( 0.7, 0.7 )
custom_constants/vseparation = 60
custom_constants/hseparation = 90
columns = 4

[node name="Panel1" type="TextureButton" parent="Skills3"]
margin_right = 96.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 3 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 15 )
texture_disabled = ExtResource( 11 )
expand = true
script = ExtResource( 19 )

[node name="Panel2" type="TextureButton" parent="Skills3"]
margin_left = 186.0
margin_right = 282.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 3 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 16 )
texture_disabled = ExtResource( 11 )
expand = true
script = ExtResource( 21 )

[node name="Panel3" type="TextureButton" parent="Skills3"]
margin_left = 372.0
margin_right = 468.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 3 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 18 )
texture_disabled = ExtResource( 11 )
expand = true

[node name="Panel4" type="TextureButton" parent="Skills3"]
margin_left = 558.0
margin_right = 654.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 3 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
expand = true

[node name="Panel5" type="TextureButton" parent="Skills3"]
margin_top = 156.0
margin_right = 96.0
margin_bottom = 252.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 3 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
expand = true

[node name="Panel6" type="TextureButton" parent="Skills3"]
margin_left = 186.0
margin_top = 156.0
margin_right = 282.0
margin_bottom = 252.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 3 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
expand = true

[node name="Panel7" type="TextureButton" parent="Skills3"]
margin_left = 372.0
margin_top = 156.0
margin_right = 468.0
margin_bottom = 252.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 3 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
expand = true

[node name="Panel8" type="TextureButton" parent="Skills3"]
margin_left = 558.0
margin_top = 156.0
margin_right = 654.0
margin_bottom = 252.0
rect_min_size = Vector2( 96, 96 )
disabled = true
toggle_mode = true
group = ExtResource( 3 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
expand = true

[node name="OkButton" type="TextureButton" parent="."]
margin_left = 370.0
margin_top = 464.286
margin_right = 563.0
margin_bottom = 507.286
texture_normal = ExtResource( 17 )
expand = true
stretch_mode = 5
script = ExtResource( 6 )

[node name="DesciptionContainer" type="VBoxContainer" parent="."]
margin_left = 553.0
margin_top = 80.0
margin_right = 896.0
margin_bottom = 480.0
custom_constants/separation = 24
script = ExtResource( 5 )
skill_desciprion_file = "res://HUD/HUD_skills_desciptions.json"

[node name="CenterContainer" type="CenterContainer" parent="DesciptionContainer"]
margin_right = 343.0
margin_bottom = 24.0

[node name="SkillName" type="Label" parent="DesciptionContainer/CenterContainer"]
margin_left = 171.0
margin_right = 171.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )

[node name="CenterContainer2" type="CenterContainer" parent="DesciptionContainer"]
margin_top = 48.0
margin_right = 343.0
margin_bottom = 48.0

[node name="Icon" type="TextureRect" parent="DesciptionContainer/CenterContainer2"]
margin_left = 171.0
margin_right = 171.0

[node name="CenterContainer3" type="CenterContainer" parent="DesciptionContainer"]
margin_top = 72.0
margin_right = 343.0
margin_bottom = 87.0

[node name="SkillManaCost" type="Label" parent="DesciptionContainer/CenterContainer3"]
margin_left = 171.0
margin_right = 171.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 5 )

[node name="SkillDescription" type="Label" parent="DesciptionContainer"]
margin_top = 111.0
margin_right = 343.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 4 )
valign = 1
autowrap = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 291.429, 227.143 )
scale = Vector2( 2.02009, 0.178574 )
texture = ExtResource( 20 )

[connection signal="toggled" from="CurrentSkills/Panel1" to="." method="_on_Panel1_toggled"]
[connection signal="toggled" from="CurrentSkills/Panel2" to="." method="_on_Panel2_toggled"]
[connection signal="toggled" from="CurrentSkills/Panel3" to="." method="_on_Panel3_toggled"]
[connection signal="pressed" from="OkButton" to="OkButton" method="_on_OkButton_pressed"]
